# cmatrix

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog  Makefile  README.md  cmatrix.1  configure.sh
.github/workflows/: cmake-single-platform.yml  macos-14.yml  macos-15.yml  make-build.yml  ubuntu-22.04.yml  ubuntu-24.04.yml
data/: install-dependencies.sh  uninstall.sh
data/fonts/: install-dejavu-user-font.sh
data/macos/: set-terminal-font.sh
include/: cmatrix.h  matrix_rain_glyphs.h
scripts/: 01_check_install_deps.sh  02_compile_install_bin.sh
src/: cmatrix.c  util.c
